# ft_irc

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  ircserv  main.cpp  server  utils.hpp
Channel/: Channel.cpp  Channel.hpp
Server/: Server.cpp  Server.hpp
User/: User.cpp  User.hpp
commands/: CMakeLists.txt  main.cpp
commands/includes/: Command.hpp  CommandParser.hpp
commands/src/: Command.cpp  CommandParser.cpp
commands/test/: CommandParserTest.cpp
commands/utilities/: utilities.cpp  utilities.hpp
